k8s/base/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tcmetrics-service
  namespace: tcmetrics
  labels:
    app: tcmetrics
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
      name: tcmetrics-port
  selector:
    app: tcmetrics
